Upgrade to java 17