@@ -18,21 +18,20 @@
         <!-- PROJECT-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <skipTests>true</skipTests>
-        <surefire.version>2.20.1</surefire.version>
-        <log4j.version>2.15.0</log4j.version>
+        <surefire.version>2.22.2</surefire.version>
+        <log4j.version>2.17.1</log4j.version>
 
-        <arlas-server.version>19.7.6</arlas-server.version>
+        <arlas-server.version>20.7.0</arlas-server.version>
         <!-- KAFKA-->
-        <kafka-connect.version>2.1.1</kafka-connect.version>
-        <kafka.version>2.1.1</kafka.version>
+        <kafka.version>3.0.0</kafka.version>
 
         <!-- DEV TOOLS -->
-        <cyclops.version>10.0.0-M7</cyclops.version>
+        <cyclops.version>10.4.0</cyclops.version>
 
         <!-- TESTS -->
-        <junit.version>4.13.1</junit.version>
-        <org.hamcrest.version>1.3</org.hamcrest.version>
-        <io.rest-assured.version>3.3.0</io.rest-assured.version>
+        <junit.version>4.13.2</junit.version>
+        <org.hamcrest.version>2.2</org.hamcrest.version>
+        <io.rest-assured.version>4.4.0</io.rest-assured.version>
 
         <!-- DOCUMENTATION GENERATION-->
         <swagger2markup.version>1.3.3</swagger2markup.version>
@@ -79,19 +78,20 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>17</release>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>2.22.2</version>
                 <configuration>
-                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
+                    <argLine>-Xmx2048m</argLine>
                     <skipITs>${skipTests}</skipITs>
                 </configuration>
                 <executions>
@@ -177,7 +177,7 @@
         <pluginRepository>
             <id>jcenter-snapshots</id>
             <name>jcenter</name>
-            <url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
+            <url>https://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
         </pluginRepository>
         <pluginRepository>
             <snapshots>
@@ -203,5 +203,4 @@
             </snapshots>
         </repository>
     </repositories>
-
 </project>
